tests/ui/privacy/privacy-sanity.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:13:1
   |
LL | pub impl Tr for S {
   | ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:14:5
   |
LL |     pub fn f() {}
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:15:5
   |
LL |     pub const C: u8 = 0;
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:16:5
   |
LL |     pub type T = u8;
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:18:1
   |
LL | pub impl S {
   | ^^^ help: remove the qualifier
   |
   = note: place qualifiers on individual impl items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:23:1
   |
LL | pub extern "C" {
   | ^^^ help: remove the qualifier
   |
   = note: place qualifiers on individual foreign items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:29:5
   |
LL |     pub Duck,
   |     ^^^ help: remove the qualifier
   |
   = note: enum variants and their fields always share the visibility of the enum they are in

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:31:5
   |
LL |     pub(crate) Dove,
   |     ^^^^^^^^^^ help: remove the qualifier
   |
   = note: enum variants and their fields always share the visibility of the enum they are in

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:47:5
   |
LL |     pub impl Tr for S {
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:48:9
   |
LL |         pub fn f() {}
   |         ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:49:9
   |
LL |         pub const C: u8 = 0;
   |         ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:50:9
   |
LL |         pub type T = u8;
   |         ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:52:5
   |
LL |     pub impl S {
   |     ^^^ help: remove the qualifier
   |
   = note: place qualifiers on individual impl items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:57:5
   |
LL |     pub extern "C" {
   |     ^^^ help: remove the qualifier
   |
   = note: place qualifiers on individual foreign items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:76:5
   |
LL |     pub impl Tr for S {
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:77:9
   |
LL |         pub fn f() {}
   |         ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:78:9
   |
LL |         pub const C: u8 = 0;
   |         ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:79:9
   |
LL |         pub type T = u8;
   |         ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:81:5
   |
LL |     pub impl S {
   |     ^^^ help: remove the qualifier
   |
   = note: place qualifiers on individual impl items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:86:5
   |
LL |     pub extern "C" {
   |     ^^^ help: remove the qualifier
   |
   = note: place qualifiers on individual foreign items instead

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:91:9
   |
LL |         pub Duck,
   |         ^^^ help: remove the qualifier
   |
   = note: enum variants and their fields always share the visibility of the enum they are in

error[E0449]: visibility qualifiers are not permitted here
  --> $DIR/privacy-sanity.rs:93:9
   |
LL |         pub(crate) Dove,
   |         ^^^^^^^^^^ help: remove the qualifier
   |
   = note: enum variants and their fields always share the visibility of the enum they are in

error: aborting due to 22 previous errors

For more information about this error, try `rustc --explain E0449`.
